<resources>
    <string name="app_name">UlazniTestovi</string>
    <string name="registration_form">Registration Form</string>
    <string name="name">Name</string>
    <string name="surname">Surname</string>
    <string name="university">University</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="email">Email</string>
    <string name="register">Register</string>
    <string name="role" />
    <string name="role_prompt" />
    <string name="create_test">Create Test</string>
    <string name="create_group">Create Group</string>
    <string-array name="university_array">
        <item></item> <!-- Blank initial value -->
        <item>TVZ</item>
        <item>FER</item>
        <item>FOI</item>
        <item>VSITE</item>
        <item>FSB</item>
        <item>ALGEBRA</item>
    </string-array>
    <string name="welcome_back">Welcome Back!</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="dialog_quit_game">Would you to like leave?</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>

    <string name="username_cannot_empty">Username cannot be empty</string>
    <string name="password_cannot_empty">Password cannot be empty</string>
    <string name="old_password_cannot_be_empty">Old Password cannot be empty</string>
    <string name="new_password_cannot_be_empty">New Password cannot be empty</string>
    <string name="confirm_new_password_cannot_be_empty">Confirm New Password cannot be empty</string>
    <string name="literature">Literature</string>
    <string name="geography">Mathematics</string>
    <string name="math">Math</string>
    <string name="finish">Finish</string>
    <string name="next">Next</string>
    <string name="literature_quiz">Adabiyot</string>
    <string name="geography_quiz">Geography</string>
    <string name="rules1_description">Viktorina 10 ta tasodifiy savolni o`z ichiga oladi.</string>
    <string name="rules2_description">Har bir to`g`ri javob sizga 5 ball beradi.</string>
    <string name="rules3_description">Har bir noto`g`ri javob sizga 2 ball tushiradi.</string>
    <string name="rules4_description"></string>
</resources>